--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,529 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
+
+* {
+  font-family: 'Outfit', sans-serif;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+.app {
+  position: relative;
+  background-color: #eaebed;
+  height: 100vh;
+}
 .App {
+  background-color: #eaebed;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+}
+.navbar {
+  padding: 10px;
+  margin: 0px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  list-style: none;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.navbar li {
+  position: relative;
+  padding: 10px 0 10px 28px;
+}
+
+.navbar a,
+.navbar a:focus {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 15px;
+  font-weight: 600;
+  color: #ab6d46;
+  white-space: nowrap;
+  transition: 0.3s;
+  position: relative;
+}
+
+.navbar a i,
+.navbar a:focus i {
+  font-size: 12px;
+  line-height: 0;
+  margin-left: 5px;
+}
+
+.navbar > ul > li > a:before {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: -5px;
+  left: 0;
+  background-color: #aea594;
+  visibility: hidden;
+  width: 0px;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.navbar a:hover:before,
+.navbar li:hover > a:before,
+.navbar .active:before {
+  visibility: visible;
+  width: 25px;
+}
+
+.navbar a:hover,
+.navbar .active,
+.navbar .active:focus,
+.navbar li:hover > a {
+  color: #aea594;
+}
+a:link {
+  text-decoration: none;
+}
+.navbar .dropdown ul {
+  display: block;
+  position: absolute;
+  left: 14px;
+  top: calc(100% + 30px);
+  margin: 0;
+  padding: 10px 0;
+  z-index: 99;
+  opacity: 0;
+  visibility: hidden;
+  background: #fff;
+  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+  transition: 0.3s;
+  border-radius: 4px;
+}
+
+.navbar .dropdown ul li {
+  min-width: 200px;
+  padding: 0;
+}
+
+.navbar .dropdown ul a {
+  padding: 10px 20px;
+  font-size: 15px;
+  text-transform: none;
+  font-weight: 600;
+}
+
+.navbar .dropdown ul a i {
+  font-size: 12px;
+}
+
+.navbar .dropdown ul a:hover,
+.navbar .dropdown ul .active:hover,
+.navbar .dropdown ul li:hover > a {
+  color: #34b7a7;
+}
+
+.navbar .dropdown:hover > ul {
+  opacity: 1;
+  top: 100%;
+  visibility: visible;
+}
+
+.navbar .dropdown .dropdown ul {
+  top: 0;
+  left: calc(100% - 30px);
+  visibility: hidden;
+}
+
+.navbar .dropdown .dropdown:hover > ul {
+  opacity: 1;
+  top: 0;
+  left: 100%;
+  visibility: visible;
+}
+
+@media (max-width: 1366px) {
+  .navbar .dropdown .dropdown ul {
+    left: -90%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .navbar .dropdown .dropdown:hover > ul {
+    left: -100%;
   }
+}
+
+.hero {
+  width: 100%;
+  height: 100vh;
+  background-image: url('./components/imag.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 80%;
+}
+.text-dec {
+  background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.4);
+  color: #ab6d46;
+  line-height: 350%;
+  border: 3px solid #f1f1f1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+  /* //////////////////////// */
+}
+
+.button {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 12px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 40px;
+  border-radius: 50px;
+  transition: 0.5s;
+  margin-top: 10px;
+  color: #fff;
+  background: #222b10;
+  cursor: pointer;
+}
+.button:hover {
+  opacity: 80%;
+}
+.container {
+  background-color: #eaebed;
+  height: 100vh;
+  opacity: 80%;
+}
+section {
+  padding: 60px 0;
+  align-items: center;
+  text-align: center;
+  color: #222b10;
+}
+.section-title {
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+.section-title h2 {
+  font-size: 32px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  position: relative;
+}
+
+.section-title p {
+  margin-bottom: 0;
+}
+.content-box {
+  overflow: auto;
+}
+.content-left {
+  float: left;
+  width: 50%;
+  height: 20%;
+  padding-left: 3%;
+}
+@media only screen and (min-width: 610px) {
+  #button-contact {
+    width: 30%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    overflow-y: scroll;
+    padding: 5%;
+    font-size: 11px;
+  }
+  .container-left {
+    padding-bottom: 10px !important;
+  }
+  .experience {
+    font-size: 10px;
+  }
+  .resume {
+    font-size: 10px;
+  }
+  .box {
+    display: flex;
+    flex-direction: column;
+  }
+  .box .itemp {
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    padding: 10%;
+    width: auto;
+    height: fit-content;
+  }
+  #contact {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 100px;
+  }
+  #contact-left {
+    width: auto;
+    padding: 5%;
+  }
+
+  .container-left form {
+    padding: 0px;
+    padding-right: 0%;
+  }
+  #contact-right {
+    width: auto;
+    padding: 5%;
+    display: flex;
+    flex-direction: column;
+  }
+  #contact-app-icon {
+    padding-right: 60px;
+  }
+}
+#contact-app-icon {
+  width: 10%;
+  float: left;
+  padding-top: 4%;
+}
+.content-left h2 {
+  color: #222b10;
+  font-size: 30px;
+}
+.content-left p {
+  padding: 3%;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+form {
+  padding: 10%;
+  padding-right: 20%;
+}
+.content-left .button {
+  float: right;
+  background-color: #aea594;
+  color: #222b10;
+}
+.content-right {
+  float: left;
+  width: 50%;
+}
+.skills-box {
+  padding-left: 3%;
+}
+.skills-box h2 {
+  color: #222b10;
+  font-size: 30px;
+}
+.skills-items {
+  padding-left: 10%;
+  padding-right: 10%;
+  color: #222b10;
+}
+.details {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.bar {
+  position: relative;
+  border: 2px solid #aea594;
+  border-radius: 20px;
+}
+.bar div {
+  position: relative;
+  width: 0;
+  height: 9px;
+  border-radius: 10px;
+  background-color: #aea594;
+}
+.skills:not(:last-child) {
+  margin-bottom: 30px;
+}
+#html-bar {
+  animation: html-fill 2s forwards;
+}
+@keyframes html-fill {
+  100% {
+    width: 100%;
+  }
+}
+#css-bar {
+  animation: css-fill 2s forwards;
+}
+@keyframes css-fill {
+  100% {
+    width: 95%;
+  }
+}
+#javascript-bar {
+  animation: js-fill 2s forwards;
+}
+@keyframes js-fill {
+  100% {
+    width: 85%;
+  }
+}
+#cs-bar {
+  animation: cs-fill 2s forwards;
+}
+@keyframes cs-fill {
+  100% {
+    width: 80%;
+  }
+}
+#photoshop-bar {
+  animation: photoshop-fill 2s forwards;
+}
+@keyframes photoshop-fill {
+  100% {
+    width: 90%;
+  }
+}
+.experience {
+  padding-left: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  float: left;
+  width: 50%;
+}
+.resume {
+  padding-left: 5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  float: left;
+  width: 50%;
+}
+
+#bullet {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  padding-right: 5%;
+}
+#bullet:before {
+  content: '';
+  display: inline-block;
+  width: 2px;
+  background: #2a1407;
+  position: absolute;
+  left: 3px;
+  top: 5px;
+  height: calc(100% - 10px);
+}
+#bullet li {
+  position: relative;
+  padding-left: 15px;
+  margin-bottom: 15px;
+}
+#bullet li:before {
+  content: '';
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  background: #2a1407;
+  position: absolute;
+  left: 0;
+  top: 5px;
+  border-radius: 10px;
+}
+.resume p {
+  padding-left: 3%;
+}
+.experience ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+.experience ul:before {
+  content: '';
+  display: inline-block;
+  width: 2px;
+  background: #2a1407;
+  position: absolute;
+  left: 3px;
+  top: 5px;
+  height: calc(100% - 10px);
+}
+.experience ul li {
+  position: relative;
+  padding-left: 15px;
+  margin-bottom: 15px;
+}
+.experience ul li:before {
+  content: '';
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  background: #2a1407;
+  position: absolute;
+  left: 0;
+  top: 5px;
+  border-radius: 10px;
+}
+.experience p {
+  padding-left: 3%;
+}
+.box {
+  display: flex;
+  height: 900px;
+  padding: 5%;
+  gap: 3%;
+  justify-content: center;
+}
+.itemp {
+  padding: 5%;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  width: 50%;
+  height: 50%;
+  padding-bottom: 0%;
+}
+.application1 {
+  background-image: url('./components/devices1.png');
+  height: 30vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.application2 {
+  background-image: url('./components/devices2.png');
+  height: 30vh;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.input {
+  font-weight: 500;
+  font-size: 14px;
+  height: 40px;
+  border-radius: 10px;
+  padding-left: 10px;
+  border: none;
+  border-bottom: 1px solid #e5e5e5;
+  outline: none;
+  margin: 0.5%;
+}
+
+.input:focus {
+  border-bottom: 1px solid #2a1407;
+  -webkit-transition: 0.1s;
+  transition: 0.5s;
+}
+#message {
+  height: 200px;
 }
